[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mgc-utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matt Chandler", email = "matt@mgchandler.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Matt Chandler/mgc-utils#readme"
Issues = "https://github.com/Matt Chandler/mgc-utils/issues"
Source = "https://github.com/Matt Chandler/mgc-utils"

[tool.hatch.version]
path = "src/mgc_utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mgc_utils tests}"

[tool.coverage.run]
source_pkgs = ["mgc_utils", "tests"]
branch = true
parallel = true
omit = [
  "src/mgc_utils/__about__.py",
]

[tool.coverage.paths]
mgc_utils = ["src/mgc_utils", "*/mgc-utils/src/mgc_utils"]
tests = ["tests", "*/mgc-utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
